Fix body overflow

--- a/source/styles/_base.scss
+++ b/source/styles/_base.scss
@@ -8,12 +8,19 @@ html {
   font-size: 16px;
 }
 
+html,
+body {
+  height: 100vh;
+  overflow: hidden;
+}
+
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  padding: 0;
+  margin: 0;
   color: #fff;
   background-color: #000;
 }
